examples/errors/mapping/go.mod
module github.com/sktylr/routeit/examples/errors/mapping

go 1.24.4

require github.com/sktylr/routeit v1.2.1
